# muvc

./: CMakeLists.txt  README.md
src/: main.cpp
src/commands/: about.cpp  about.hpp  check.cpp  check.hpp  init.cpp  init.hpp  list.cpp  list.hpp  restore.cpp  restore.hpp  snap.cpp  snap.hpp  stage.cpp  stage.hpp
src/utils/: hash.cpp  hash.hpp
